@@ -7,6 +7,9 @@ v0.83.8		22-Jan-2006
 		corrupt bluewave download packets.
 		Bluewave is now big/little endian correct.
 
+	mbtask:
+		Added logging of some user messages to chat.log
+
 
 v0.83.7		31-Dec-2005 - 22-Jan-2006
 
